--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <section class="gallery">
 
     <div class="box">
-        <img src="images/img1.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
@@ -84,7 +84,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img2.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
@@ -96,7 +96,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img3.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
@@ -108,7 +108,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img4.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
@@ -120,7 +120,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img5.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
@@ -132,7 +132,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img6.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
@@ -144,7 +144,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img7.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
@@ -156,7 +156,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img8.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
@@ -168,7 +168,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img9.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
@@ -180,7 +180,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img10.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
@@ -192,7 +192,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img11.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
@@ -204,7 +204,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img12.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
@@ -216,7 +216,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img13.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
@@ -228,7 +228,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img14.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
@@ -240,7 +240,7 @@
     </div>
 
     <div class="box">
-        <img src="images/img15.jpg" alt="">
+        <img src="math.jpg" alt="">
         <div class="info">
             <a href="#" class="fas fa-download"></a>
             <div class="links">
