--- a/index.html
+++ b/index.html
@@ -1,318 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mansory image gallery website design tutorial</title>
-
-    <!-- font awesome cdn link  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-
-    <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
-
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>galeria img</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- minha galeria  -->
 </head>
 <body>
+    <h1>galeria do math - teste css</h1>
+  <div class="container">
+
+    <div class="gallery-container w-3 h-2">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (8).jpg" alt="nature">
+        </div>
+        <div class="text">eu 8</div>
+      </div>
+    </div>
+
+    <div class="gallery-container w-3 h-3">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (7).jpg" alt="eu">
+        </div>
+        <div class="text">eu-7</div>
+      </div>
+    </div>
+
+    <div class="gallery-container h-2">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (6).jpg"  alt="eu">
+        </div>
+        <div class="text">eu-6</div>
+      </div>
+    </div>
+
+    <div class="gallery-container w-2">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (5).jpg" alt="eu">
+        </div>
+        <div class="text">eu-5</div>
+      </div>
+    </div>
+
+    <div class="gallery-container">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (4).jpg" alt="eu">
+        </div>
+        <div class="text">eu-4</div>
+      </div>
+    </div>
+
+    <div class="gallery-container">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (3).jpg" alt="eu">
+        </div>
+        <div class="text">eu-3</div>
+      </div>
+    </div>
+
+    <div class="gallery-container a-2">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (2).jpg" alt="eu">
+        </div>
+        <div class="text">eu-2</div>
+      </div>
+    </div>
+
+    <div class="gallery-container m-3 t-2">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (1).jpg" alt="eu">
+        </div>
+        <div class="text">eu-1</div>
+      </div>
+    </div>
+
+  </div>
     
-<!-- header section starts  -->
-
-<header>
-
-<a href="#" class="logo"><i class="fas fa-fire"></i>free</a>
-
-<form action="">
-    <input type="search" id="search" placeholder="search images">
-    <label for="search" class="fas fa-search"></label>
-</form>
-
-<div id="menu" class="fas fa-bars"></div>
-
-<nav class="navbar">
-    <ul>
-        <li><a href="#">explore</a></li>
-        <li><a href="#">licence</a></li>
-        <li><a href="#">login</a></li>
-    </ul>
-</nav>
-
-<a href="#" class="upload">upload</a>
-
-</header>
-
-<!-- header section ends  -->
-
-
-<!-- home section starts  -->
-
-<section class="home">
-
-<h1>stunning royalty free stock photos</h1>
-
-<form action="">
-    <input type="search" id="home-search" placeholder="search images">
-    <label for="home-search" class="fas fa-search"></label>
-</form>
-
-<ul class="suggestion">
-    <li>suggestions : </li>
-    <li><a href="#">nature</a></li>
-    <li><a href="#">girl</a></li>
-    <li><a href="#">man</a></li>
-    <li><a href="#">corporate</a></li>
-    <li><a href="#">city</a></li>
-    <li><a href="#">more...</a></li>
-</ul>
-
-</section>
-
-<!-- home section ends -->
-
-<!-- gallery section start  -->
-
-<section class="gallery">
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="math.jpg" alt="">
-        <div class="info">
-            <a href="#" class="fas fa-download"></a>
-            <div class="links">
-                <a href="#" class="far fa-heart"></a>
-                <a href="#" class="far fa-comment"></a>
-                <a href="#" class="far fa-thumbs-up"></a>
-            </div>
-        </div>
-    </div>
-
-</section>
-
-<!-- gallery section ends -->
-
-<a href="#" class="more">discover more</a>
-
-<!-- footer section starts  -->
-
-<section class="footer">
-
-<div class="box-container">
-
-    <div class="box">
-        <h3>why choose us?</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, ducimus vitae enim cum vero fugiat minima reprehenderit dolores eaque voluptate.</p>
-    </div>
-
-    <div class="box">
-        <h3>quick links</h3>
-        <a href="#">home</a>
-        <a href="#">explore</a>
-        <a href="#">licence</a>
-        <a href="#">login</a>
-    </div>
-
-    <div class="box">
-        <h3>newsletter</h3>
-        <p>subscribe for latest updates</p>
-        <form action="">
-            <input type="email" placeholder="enter your email">
-            <button class="fas fa-paper-plane"></button>
-        </form>
-    </div>
-
-</div>
-
-<h1 class="credit">created by <a href="#">mr. web designer</a> | all rights reserved.</h1>
-
-</section>
-
-<!-- footer section ends -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- jquery cdn link  -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-<!-- custom js file link  -->
-<script src="js/main.js"></script>
-
-
 </body>
 </html>
