--- a/index.html
+++ b/index.html
@@ -8,83 +8,62 @@
     <link rel="stylesheet" href="style.css">
     <!-- minha galeria  -->
 </head>
-<body>
-    <h1>galeria do math - teste css</h1>
-  <div class="container">
-
-    <div class="gallery-container w-3 h-2">
-      <div class="gallery-item">
-        <div class="image">
-          <img src="fotos-grid/eu (8).jpg" alt="nature">
-        </div>
-        <div class="text">eu 8</div>
-      </div>
-    </div>
-
-    <div class="gallery-container w-3 h-3">
-      <div class="gallery-item">
-        <div class="image">
-          <img src="fotos-grid/eu (7).jpg" alt="eu">
-        </div>
-        <div class="text">eu-7</div>
-      </div>
-    </div>
-
-    <div class="gallery-container h-2">
-      <div class="gallery-item">
-        <div class="image">
-          <img src="fotos-grid/eu (6).jpg"  alt="eu">
-        </div>
-        <div class="text">eu-6</div>
-      </div>
-    </div>
-
-    <div class="gallery-container w-2">
-      <div class="gallery-item">
-        <div class="image">
-          <img src="fotos-grid/eu (5).jpg" alt="eu">
-        </div>
-        <div class="text">eu-5</div>
-      </div>
-    </div>
-
-    <div class="gallery-container">
-      <div class="gallery-item">
-        <div class="image">
-          <img src="fotos-grid/eu (4).jpg" alt="eu">
-        </div>
-        <div class="text">eu-4</div>
-      </div>
-    </div>
-
-    <div class="gallery-container">
-      <div class="gallery-item">
-        <div class="image">
-          <img src="fotos-grid/eu (3).jpg" alt="eu">
-        </div>
-        <div class="text">eu-3</div>
-      </div>
-    </div>
-
-    <div class="gallery-container a-2">
-      <div class="gallery-item">
-        <div class="image">
-          <img src="fotos-grid/eu (2).jpg" alt="eu">
-        </div>
-        <div class="text">eu-2</div>
-      </div>
-    </div>
-
-    <div class="gallery-container m-3 t-2">
-      <div class="gallery-item">
-        <div class="image">
-          <img src="fotos-grid/eu (1).jpg" alt="eu">
-        </div>
-        <div class="text">eu-1</div>
-      </div>
-    </div>
-
-  </div>
-    
+<body> 
+  <header>
+    <h1>galeria img</h1>
+  </header>
+  <main>
+    <div class="galeria">
+      <a href="#chick-hicks" class="galeria-items">
+          <img src="fotos-grid/eu (1).jpg" alt="Chick Hicks">
+      </a>
+      <a href="img/doctor hudson.jpg" class="galeria-items">
+          <img src="/fotos-grid/eu (2).jpg" alt="Doctor Hudson">
+      </a>
+      <a href="img/Fillmore.jpg" class="galeria-items">
+          <img src="/fotos-grid/eu (3).jpg" alt="Fillmore">
+      </a>
+      <a href="img/flo.jpg" class="galeria-items">
+          <img src="/fotos-grid/eu (4).jpg" alt="Flo">
+      </a>
+      <a href="img/Guido.png" class="galeria-items">
+          <img src="/fotos-grid/eu (5).jpg" alt="Guido">
+      </a>
+      <a href="img/lightning-mcqueen.jpg" class="galeria-items">
+          <img src="/fotos-grid/eu (6).jpg" alt="lightning-mcqueen">
+      </a>
+      <a href="img/Lizzie.jpg" class="galeria-items">
+          <img src="/fotos-grid/eu (7).jpg" alt="Lizzie">
+      </a>
+      <a href="img/Luigi.png" class="galeria-items">
+          <img src="/fotos-grid/eu (8).jpg" alt="Luigi">
+      </a>
+      <a href="img/Mack.jpg" class="galeria-items">
+          <img src="/fotos-grid/eu (9).jpg" alt="Mack">
+      </a>
+      <a href="img/Ramone.jpg" class="galeria-items">
+          <img src="/fotos-grid/eu (10).jpg" alt="Ramone">
+      </a>
+      <a href="img/Ruivo.jpg" class="galeria-items">
+          <img src="/fotos-grid/eu (11).jpg" alt="Ruivo">
+      </a>
+      <a href="img/Sally Carrera.jpg" class="galeria-items">
+          <img src="/fotos-grid/eu (12).jpg" alt="Sally">
+      </a>
+      <a href="img/Sheriff.jpg" class="galeria-items">
+          <img src="/fotos-grid/eu (13).jpg" alt="Sheriff">
+      </a>
+      <a href="img/sven.jpg" class="galeria-items">
+          <img src="/fotos-grid/eu (14).jpg" alt="Sven">
+      </a>
+      <a href="img/The King.jpg" class="galeria-items">
+          <img src="/fotos-grid/eu (15).jpg" alt="The King">
+      </a>
+      <a href="img/Tow Mater.jpg" class="galeria-items">
+          <img src="/fotos-grid/eu (16).jpg" alt="Tow Mater">
+      </a>
+  </div>        
+  </main>
+  <footer>matheus farias </footer>
 </body>
 </html>
