--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   </header>
   <main>
     <div class="galeria">
-      <a href="#chick-hicks" class="galeria-items">
+      <a href="/fotos-grid/eu (1).jpg" class="galeria-items">
           <img src="fotos-grid/eu (1).jpg" alt="Chick Hicks">
       </a>
-      <a href="img/doctor hudson.jpg" class="galeria-items">
+      <a href="/fotos-grid/eu (2).jpg" class="galeria-items">
           <img src="/fotos-grid/eu (2).jpg" alt="Doctor Hudson">
       </a>
-      <a href="img/Fillmore.jpg" class="galeria-items">
+      <a href="/fotos-grid/eu (3).jpg" class="galeria-items">
           <img src="/fotos-grid/eu (3).jpg" alt="Fillmore">
       </a>
       <a href="img/flo.jpg" class="galeria-items">
