--- a/index.html
+++ b/index.html
@@ -59,10 +59,83 @@
       <a href="img/The King.jpg" class="galeria-items">
           <img src="/fotos-grid/eu (15).jpg" alt="The King">
       </a>
-      <a href="img/Tow Mater.jpg" class="galeria-items">
-          <img src="/fotos-grid/eu (16).jpg" alt="Tow Mater">
-      </a>
-  </div>        
+  </div> 
+  <h1>galeria do math - teste css</h1>
+  <div class="container">
+
+    <div class="gallery-container w-3 h-2">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (8).jpg" alt="nature">
+        </div>
+        <div class="text">eu 8</div>
+      </div>
+    </div>
+
+    <div class="gallery-container w-3 h-3">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (7).jpg" alt="eu">
+        </div>
+        <div class="text">eu-7</div>
+      </div>
+    </div>
+
+    <div class="gallery-container h-2">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (6).jpg" alt="eu">
+        </div>
+        <div class="text">eu-6</div>
+      </div>
+    </div>
+
+    <div class="gallery-container w-2">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (5).jpg" alt="eu">
+        </div>
+        <div class="text">eu-5</div>
+      </div>
+    </div>
+
+    <div class="gallery-container">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (4).jpg" alt="eu">
+        </div>
+        <div class="text">eu-4</div>
+      </div>
+    </div>
+
+    <div class="gallery-container">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (3).jpg" alt="eu">
+        </div>
+        <div class="text">eu-3</div>
+      </div>
+    </div>
+
+    <div class="gallery-container a-2">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (2).jpg" alt="eu">
+        </div>
+        <div class="text">eu-2</div>
+      </div>
+    </div>
+
+    <div class="gallery-container m-3 t-2">
+      <div class="gallery-item">
+        <div class="image">
+          <img src="fotos-grid/eu (1).jpg" alt="eu">
+        </div>
+        <div class="text">eu-1</div>
+      </div>
+    </div>
+
+  </div>
   </main>
   <footer>matheus farias </footer>
 </body>
