--- a/index.html
+++ b/index.html
@@ -14,50 +14,50 @@
   </header>
   <main>
     <div class="galeria">
-      <a href="/fotos-grid/eu (1).jpg" class="galeria-items">
+      <a href="fotos-grid/eu (1).jpg" class="galeria-items">
           <img src="fotos-grid/eu (1).jpg" alt="Chick Hicks">
       </a>
-      <a href="/fotos-grid/eu (2).jpg" class="galeria-items">
-          <img src="/fotos-grid/eu (2).jpg" alt="Doctor Hudson">
+      <a href="fotos-grid/eu (2).jpg" class="galeria-items">
+          <img src="fotos-grid/eu (2).jpg" alt="Doctor Hudson">
       </a>
-      <a href="/fotos-grid/eu (3).jpg" class="galeria-items">
-          <img src="/fotos-grid/eu (3).jpg" alt="Fillmore">
+      <a href="fotos-grid/eu (3).jpg" class="galeria-items">
+          <img src="fotos-grid/eu (3).jpg" alt="Fillmore">
       </a>
       <a href="img/flo.jpg" class="galeria-items">
-          <img src="/fotos-grid/eu (4).jpg" alt="Flo">
+          <img src="fotos-grid/eu (4).jpg" alt="Flo">
       </a>
       <a href="img/Guido.png" class="galeria-items">
-          <img src="/fotos-grid/eu (5).jpg" alt="Guido">
+          <img src="fotos-grid/eu (5).jpg" alt="Guido">
       </a>
       <a href="img/lightning-mcqueen.jpg" class="galeria-items">
-          <img src="/fotos-grid/eu (6).jpg" alt="lightning-mcqueen">
+          <img src="fotos-grid/eu (6).jpg" alt="lightning-mcqueen">
       </a>
       <a href="img/Lizzie.jpg" class="galeria-items">
-          <img src="/fotos-grid/eu (7).jpg" alt="Lizzie">
+          <img src="fotos-grid/eu (7).jpg" alt="Lizzie">
       </a>
       <a href="img/Luigi.png" class="galeria-items">
-          <img src="/fotos-grid/eu (8).jpg" alt="Luigi">
+          <img src="fotos-grid/eu (8).jpg" alt="Luigi">
       </a>
       <a href="img/Mack.jpg" class="galeria-items">
-          <img src="/fotos-grid/eu (9).jpg" alt="Mack">
+          <img src="fotos-grid/eu (9).jpg" alt="Mack">
       </a>
       <a href="img/Ramone.jpg" class="galeria-items">
-          <img src="/fotos-grid/eu (10).jpg" alt="Ramone">
+          <img src="fotos-grid/eu (10).jpg" alt="Ramone">
       </a>
       <a href="img/Ruivo.jpg" class="galeria-items">
-          <img src="/fotos-grid/eu (11).jpg" alt="Ruivo">
+          <img src="fotos-grid/eu (11).jpg" alt="Ruivo">
       </a>
       <a href="img/Sally Carrera.jpg" class="galeria-items">
-          <img src="/fotos-grid/eu (12).jpg" alt="Sally">
+          <img src="fotos-grid/eu (12).jpg" alt="Sally">
       </a>
       <a href="img/Sheriff.jpg" class="galeria-items">
-          <img src="/fotos-grid/eu (13).jpg" alt="Sheriff">
+          <img src="fotos-grid/eu (13).jpg" alt="Sheriff">
       </a>
       <a href="img/sven.jpg" class="galeria-items">
-          <img src="/fotos-grid/eu (14).jpg" alt="Sven">
+          <img src="fotos-grid/eu (14).jpg" alt="Sven">
       </a>
       <a href="img/The King.jpg" class="galeria-items">
-          <img src="/fotos-grid/eu (15).jpg" alt="The King">
+          <img src="fotos-grid/eu (15).jpg" alt="The King">
       </a>
   </div> 
   <h1>galeria do math - teste css</h1>
