--- a/index.html
+++ b/index.html
@@ -134,8 +134,91 @@
         <div class="text">eu-1</div>
       </div>
     </div>
-
   </div>
+  <h1>fotos com comentarios</h1>
+  <div class="container-2">
+    <div class="polaroid">
+      <img class="photo" src="https://source.unsplash.com/user/willianjusten/1800x800" alt="">
+  
+      <div class="caption">
+        <h2>Somewhere</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quas, obcaecati nulla minus expedita autem maiores in quo, optio earum dolorem libero. Odio laborum voluptates aliquam provident aut laudantium non.</p>
+      </div>
+    </div>
+  
+    <div class="polaroid">
+      <img class="photo" src="https://source.unsplash.com/user/willianjusten/800x801" alt="">
+  
+      <div class="caption">
+        <h2>Somewhere</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quas, obcaecati nulla minus expedita autem maiores in quo, optio earum dolorem libero. Odio laborum voluptates aliquam provident aut laudantium non.</p>
+      </div>
+    </div>
+  
+    <div class="polaroid">
+      <img class="photo" src="https://source.unsplash.com/user/willianjusten/800x802" alt="">
+  
+      <div class="caption">
+        <h2>Somewhere</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quas, obcaecati nulla minus expedita autem maiores in quo, optio earum dolorem libero. Odio laborum voluptates aliquam provident aut laudantium non.</p>
+      </div>
+    </div>
+    
+    <div class="polaroid">
+      <img class="photo" src="https://source.unsplash.com/user/willianjusten/801x800" alt="">
+  
+      <div class="caption">
+        <h2>Somewhere</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quas, obcaecati nulla minus expedita autem maiores in quo, optio earum dolorem libero. Odio laborum voluptates aliquam provident aut laudantium non.</p>
+      </div>
+    </div>
+  
+    <div class="polaroid">
+      <img class="photo" src="https://source.unsplash.com/user/willianjusten/802x801" alt="">
+  
+      <div class="caption">
+        <h2>Somewhere</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quas, obcaecati nulla minus expedita autem maiores in quo, optio earum dolorem libero. Odio laborum voluptates aliquam provident aut laudantium non.</p>
+      </div>
+    </div>
+  
+    <div class="polaroid">
+      <img class="photo" src="https://source.unsplash.com/user/willianjusten/803x802" alt="">
+  
+      <div class="caption">
+        <h2>Somewhere</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quas, obcaecati nulla minus expedita autem maiores in quo, optio earum dolorem libero. Odio laborum voluptates aliquam provident aut laudantium non.</p>
+      </div>
+    </div>
+    
+    <div class="polaroid">
+      <img class="photo" src="https://source.unsplash.com/user/willianjusten/801x801" alt="">
+  
+      <div class="caption">
+        <h2>Somewhere</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quas, obcaecati nulla minus expedita autem maiores in quo, optio earum dolorem libero. Odio laborum voluptates aliquam provident aut laudantium non.</p>
+      </div>
+    </div>
+  
+    <div class="polaroid">
+      <img class="photo" src="https://source.unsplash.com/user/willianjusten/802x800" alt="">
+  
+      <div class="caption">
+        <h2>Somewhere</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quas, obcaecati nulla minus expedita autem maiores in quo, optio earum dolorem libero. Odio laborum voluptates aliquam provident aut laudantium non.</p>
+      </div>
+    </div>
+  
+    <div class="polaroid">
+      <img class="photo" src="https://source.unsplash.com/user/willianjusten/803x800" alt="">
+  
+      <div class="caption">
+        <h2>Somewhere</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quas, obcaecati nulla minus expedita autem maiores in quo, optio earum dolorem libero. Odio laborum voluptates aliquam provident aut laudantium non.</p>
+      </div>
+    </div>
+  </div>
+
   </main>
   <footer>matheus farias </footer>
 </body>
