--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   </div>
   <h1>fotos com comentarios</h1>
   <div class="container-2">
-    <div class="polaroid">
+    <div class="img-1">
       <img class="photo" src="https://source.unsplash.com/user/willianjusten/1800x800" alt="">
   
       <div class="caption">
@@ -146,7 +146,7 @@
       </div>
     </div>
   
-    <div class="polaroid">
+    <div class="img-1">
       <img class="photo" src="https://source.unsplash.com/user/willianjusten/800x801" alt="">
   
       <div class="caption">
@@ -155,7 +155,7 @@
       </div>
     </div>
   
-    <div class="polaroid">
+    <div class="img-1">
       <img class="photo" src="https://source.unsplash.com/user/willianjusten/800x802" alt="">
   
       <div class="caption">
@@ -164,7 +164,7 @@
       </div>
     </div>
     
-    <div class="polaroid">
+    <div class="img-1">
       <img class="photo" src="https://source.unsplash.com/user/willianjusten/801x800" alt="">
   
       <div class="caption">
@@ -173,7 +173,7 @@
       </div>
     </div>
   
-    <div class="polaroid">
+    <div class="img-1">
       <img class="photo" src="https://source.unsplash.com/user/willianjusten/802x801" alt="">
   
       <div class="caption">
@@ -182,7 +182,7 @@
       </div>
     </div>
   
-    <div class="polaroid">
+    <div class="img-1">
       <img class="photo" src="https://source.unsplash.com/user/willianjusten/803x802" alt="">
   
       <div class="caption">
@@ -191,7 +191,7 @@
       </div>
     </div>
     
-    <div class="polaroid">
+    <div class="img-1">
       <img class="photo" src="https://source.unsplash.com/user/willianjusten/801x801" alt="">
   
       <div class="caption">
@@ -200,7 +200,7 @@
       </div>
     </div>
   
-    <div class="polaroid">
+    <div class="img-1">
       <img class="photo" src="https://source.unsplash.com/user/willianjusten/802x800" alt="">
   
       <div class="caption">
@@ -209,7 +209,7 @@
       </div>
     </div>
   
-    <div class="polaroid">
+    <div class="img-1">
       <img class="photo" src="https://source.unsplash.com/user/willianjusten/803x800" alt="">
   
       <div class="caption">
