--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </div>
     </div>
   </div>
-  
+
   <h1>fotos com comentarios</h1>
   <div class="container-2">
     <div class="img-1">
@@ -218,6 +218,29 @@
       </div>
     </div>
   </div>
+ <!-- ultima fotos  -->
+ <h1>fotos de lado a lado</h1>
+<div class="ultima-1">
+  <div class="img-2">
+    <img class="foto-c2" src="/fotos-grid/eu (8).jpg" alt="">
+
+    <div class="comentarios">
+      <h2>daniel</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+    </div>
+  </div>
+</div>
+<h1>fotos de lado a lado 2</h1>
+<div class="ultima-2">
+  <div class="img-3">
+    <img class="foto-c3" src="/fotos-grid/eu (8).jpg" alt="">
+
+    <div class="comentarios">
+      <h2>daniel</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+    </div>
+  </div>
+</div>
 
   </main>
   <footer>matheus farias </footer>
