--- a/index.html
+++ b/index.html
@@ -241,6 +241,24 @@
     </div>
   </div>
 </div>
+<div class="ultima-3"> <!-- lado a lado  -->
+  <div class="img-3">
+    <img class="foto-c3" src="/fotos-grid/eu (8).jpg" alt="">
+
+    <div class="comentarios">
+      <h2>daniel</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+    </div>
+  </div>
+  <div class="img-3">
+    <img class="foto-c3" src="/fotos-grid/eu (8).jpg" alt="">
+
+    <div class="comentarios">
+      <h2>daniel</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+    </div>
+  </div>
+</div>
 
   </main>
   <footer>matheus farias </footer>
