--- a/index.html
+++ b/index.html
@@ -258,6 +258,15 @@
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
     </div>
   </div>
+  <div class="img-3">
+    <img class="foto-c3" src="/fotos-grid/eu (8).jpg" alt="">
+
+    <div class="comentarios">
+      <h2>daniel</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+    </div>
+  </div>
+  <!-- esta div se liga com a ultima 3  -->
 </div>
 
   </main>
