--- a/index.html
+++ b/index.html
@@ -266,9 +266,20 @@
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
     </div>
   </div>
-  <!-- esta div se liga com a ultima 3  -->
+  <!-- esta div se liga com a ultima 3 class="galeria" -->
 </div>
-
+<!-- teste com o css -->
+      <h1>teste com o css - </h1>
+      <div class="container">
+        <div class="gallery-container w-3 h-2">
+          <div class="gallery-item">
+            <div class="image">
+              <img src="fotos-grid/eu (8).jpg" alt="nature">
+            </div>
+            <div class="text">eu 8</div>
+          </div>
+        </div>
+      </div>
   </main>
   <footer>matheus farias </footer>
 </body>
