--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@
 </div>
 <!-- teste com o css -->
       <h1>teste com o css - </h1>
-      <div class="container">
-        <div class="gallery-container w-3 h-2">
-          <div class="gallery-item">
-            <div class="image">
+      <div class="container-t-css">
+        <div class="mt1 mt2">
+          <div class="galeria-css-2">
+            <div class="image1">
               <img src="fotos-grid/eu (8).jpg" alt="nature">
             </div>
             <div class="text">eu 8</div>
