--- a/index.html
+++ b/index.html
@@ -276,7 +276,35 @@
             <div class="image1">
               <img src="fotos-grid/eu (8).jpg" alt="nature">
             </div>
-            <div class="text">eu 8</div>
+            <div class="text1">matheus f</div>
+          </div>
+        </div>
+        <div class=""> <!-- tirei para testar -->
+          <div class="galeria-css-2">
+            <div class="image1">
+              <img src="fotos-grid/eu (8).jpg" alt="nature">
+            </div>
+            <div class="text1">matheus f</div>
+          </div>
+        </div>
+      </div>
+      <!-- tirei para testar -->
+      <h1>teste com o css 2 - </h1>
+      <div class="container-t-css-3">
+        <div class="mts mt3">
+          <div class="galeria-css-3">
+            <div class="image2">
+              <img src="fotos-grid/eu (8).jpg" alt="nature">
+            </div>
+            <div class="text1">matheus f</div>
+          </div>
+        </div>
+        <div class=""> <!-- tirei para testar -->
+          <div class="galeria-css-3">
+            <div class="image2">
+              <img src="fotos-grid/eu (8).jpg" alt="nature">
+            </div>
+            <div class="text1">matheus f</div>
           </div>
         </div>
       </div>
