--- a/index.html
+++ b/index.html
@@ -290,8 +290,16 @@
       </div>
       <!-- tirei para testar -->
       <h1>teste com o css 2 - </h1>
-      <div class="container-t-css-3">
-        <div class="mts mt3">
+      <div class="container-t-css-1">
+        <div class="mt1-1 mt2-1">
+          <div class="galeria-css-3">
+            <div class="image2">
+              <img src="fotos-grid/eu (8).jpg" alt="nature">
+            </div>
+            <div class="text1">matheus f</div>
+          </div>
+        </div>
+        <div class=""> <!-- tirei para testar -->
           <div class="galeria-css-3">
             <div class="image2">
               <img src="fotos-grid/eu (8).jpg" alt="nature">
