--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <div class="text1">matheus f</div>
           </div>
         </div>
-        <div class=""> <!-- tirei para testar -->
+        <div class=""> <!-- tem q deixar -->
           <div class="galeria-css-3">
             <div class="image2">
               <img src="fotos-grid/eu (8).jpg" alt="nature">
@@ -307,7 +307,7 @@
             <div class="text1">matheus f</div>
           </div>
         </div>
-        <div class=""> <!-- tirei para testar -->
+        <div class=""> <!-- tirei para testar tem que deixar -->
           <div class="galeria-css-3">
             <div class="image2">
               <img src="fotos-grid/eu (8).jpg" alt="nature">
@@ -316,6 +316,10 @@
           </div>
         </div>
       </div>
+
+
+    
+    
   </main>
   <footer>matheus farias </footer>
 </body>
