--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </div>
   
     <div class="img-1">
-      <img class="foto-c" src="/fotos-grid/eu (2).jpg" alt="">
+      <img class="foto-c" src="fotos-grid/eu (2).jpg" alt="">
   
       <div class="comentarios">
         <h2>matheus</h2>
@@ -156,7 +156,7 @@
     </div>
   
     <div class="img-1">
-      <img class="foto-c" src="/fotos-grid/eu (3).jpg" alt="">
+      <img class="foto-c" src="fotos-grid/eu (3).jpg" alt="">
   
       <div class="comentarios">
         <h2>lucas</h2>
@@ -165,7 +165,7 @@
     </div>
     
     <div class="img-1">
-      <img class="foto-c" src="/fotos-grid/eu (4).jpg" alt="">
+      <img class="foto-c" src="fotos-grid/eu (4).jpg" alt="">
   
       <div class="comentarios">
         <h2>giovana</h2>
@@ -174,7 +174,7 @@
     </div>
   
     <div class="img-1">
-      <img class="foto-c" src="/fotos-grid/eu (5).jpg" alt="">
+      <img class="foto-c" src="fotos-grid/eu (5).jpg" alt="">
   
       <div class="comentarios">
         <h2>neiva</h2>
@@ -183,7 +183,7 @@
     </div>
   
     <div class="img-1">
-      <img class="foto-c" src="/fotos-grid/eu (6).jpg" alt="">
+      <img class="foto-c" src="fotos-grid/eu (6).jpg" alt="">
   
       <div class="comentarios">
         <h2>gilberto</h2>
@@ -192,7 +192,7 @@
     </div>
     
     <div class="img-1">
-      <img class="foto-c" src="/fotos-grid/eu (7).jpg" alt="">
+      <img class="foto-c" src="fotos-grid/eu (7).jpg" alt="">
   
       <div class="comentarios">
         <h2>alan</h2>
@@ -201,7 +201,7 @@
     </div>
   
     <div class="img-1">
-      <img class="foto-c" src="/fotos-grid/eu (8).jpg" alt="">
+      <img class="foto-c" src="fotos-grid/eu (8).jpg" alt="">
   
       <div class="comentarios">
         <h2>daniel</h2>
@@ -210,7 +210,7 @@
     </div>
   
     <div class="img-1">
-      <img class="foto-c" src="/fotos-grid/eu (9).jpg" alt="">
+      <img class="foto-c" src="fotos-grid/eu (9).jpg" alt="">
   
       <div class="comentarios">
         <h2>leonardo</h2>
@@ -222,7 +222,7 @@
  <h1>fotos de lado a lado</h1>
 <div class="ultima-1">
   <div class="img-2">
-    <img class="foto-c2" src="/fotos-grid/eu (8).jpg" alt="">
+    <img class="foto-c2" src="fotos-grid/eu (8).jpg" alt="">
 
     <div class="comentarios">
       <h2>daniel</h2>
@@ -233,7 +233,7 @@
 <h1>fotos de lado a lado 2</h1>
 <div class="ultima-2">
   <div class="img-3">
-    <img class="foto-c3" src="/fotos-grid/eu (8).jpg" alt="">
+    <img class="foto-c3" src="fotos-grid/eu (8).jpg" alt="">
 
     <div class="comentarios">
       <h2>daniel</h2>
@@ -243,7 +243,7 @@
 </div>
 <div class="ultima-3"> <!-- lado a lado  -->
   <div class="img-3">
-    <img class="foto-c3" src="/fotos-grid/eu (8).jpg" alt="">
+    <img class="foto-c3" src="fotos-grid/eu (8).jpg" alt="">
 
     <div class="comentarios">
       <h2>daniel</h2>
@@ -251,7 +251,7 @@
     </div>
   </div>
   <div class="img-3">
-    <img class="foto-c3" src="/fotos-grid/eu (8).jpg" alt="">
+    <img class="foto-c3" src="fotos-grid/eu (8).jpg" alt="">
 
     <div class="comentarios">
       <h2>daniel</h2>
@@ -259,7 +259,7 @@
     </div>
   </div>
   <div class="img-3">
-    <img class="foto-c3" src="/fotos-grid/eu (8).jpg" alt="">
+    <img class="foto-c3" src="fotos-grid/eu (8).jpg" alt="">
 
     <div class="comentarios">
       <h2>daniel</h2>
